--- a/src/kirby_galaxy.html
+++ b/src/kirby_galaxy.html
@@ -1,22 +1,23 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>Kirby Galaxy</title>
+		<title>Three.js Scene Graph</title>
 
-		<link rel="stylesheet" href="../css/main.css" />
-		<link rel="stylesheet" href="../css/threejs3DObjects.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<link rel="stylesheet" href="css/threejsscene.css" />
 
-		<script type="module" src="kirby_galaxy.js"></script>
+		<script type="module" defer src="kirby_galaxy.js"></script>
 
 	</head>
+	<body> 
 
-	<body>
 		<div id="container">
-			<canvas id="webglcanvas" width=1600 height=1200>
-                
-            </canvas>
-	</div>
-
-	</div>
+			<canvas id="webglcanvas" width=800 height=600></canvas>
+			<div id="title">
+				kirby
+			</div>
+		</div>
+		
+	</body>
 
 </html>
