--- a/src/kirby_galaxy.html
+++ b/src/kirby_galaxy.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>Three.js Scene Graph</title>
+		<title>K I R B Y   G A L A X Y</title>
 
 		<link rel="stylesheet" href="css/main.css" />
 		<link rel="stylesheet" href="css/threejsscene.css" />
@@ -10,12 +10,19 @@
 
 	</head>
 	<body> 
+		<div id="title">
+			<h2>Kirby</h2>
+		</div>
 
 		<div id="container">
 			<canvas id="webglcanvas" width=800 height=600></canvas>
-			<div id="title">
-				kirby
-			</div>
+		</div>
+		
+		<div id="credits">
+			<p>Created by:</p>
+			<p>Viviana Osorio Nieto</p>
+			<p>Pablo Garcia Morales</p>
+			<p>Eduardo R. Muller R</p>
 		</div>
 		
 	</body>
