--- a/src/mainPage.html
+++ b/src/mainPage.html
@@ -8,6 +8,8 @@
 
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="mainPageCSS.css">
+
+    <script type="module" defer src="mainPage.html"></script>
 </head>
 <body>
     <section class="wrapper">
