--- a/src/kirby_galaxy.html
+++ b/src/kirby_galaxy.html
@@ -9,13 +9,20 @@
 		<link rel="stylesheet" href="mainPageCSS.css">
 		<script type="module" defer src="kirby_galaxy.js"></script>
 	</head>
-	
+
 
 	<body> 
 		
 		<div id="all"> 
 			<div id="title">
 				<h2>Kirby</h2>
+				<div id="title-tag">
+					SCORE:
+				</div>
+				<div id="tag">
+				  +100  
+				</div>
+				<div id="score">0</div>
 			</div>
 
 			<div id="container">
