--- a/src/kirby_galaxy.html
+++ b/src/kirby_galaxy.html
@@ -14,18 +14,21 @@
 	<body> 
 		
 		<div id="all"> 
-			<div id="title">
+			<div id="title2">
 				<h2>Kirby</h2>
-				<div id="title-tag">
-					SCORE:
-				</div>
-				<div id="tag">
-				  +100  
-				</div>
-				<div id="score">0</div>
+				
 			</div>
-
-			<div id="container">
+			<div id="center">
+				<div id="title">
+				  SCORE:
+				</div>	
+			  </div>
+			  <div id="tag">
+				+100  
+				</div>
+				<div id="score">
+				  0
+				</div>
 				<section class="wrapper">
 					<div id="stars"></div>
 					<div id="stars2"></div>
