remove snow after collision, change font color on HTML

--- a/src/kirby_galaxy.html
+++ b/src/kirby_galaxy.html
@@ -14,19 +14,19 @@
 	<body> 
 		
 		<div id="all"> 
-			<div id="title2">
-				<h2>Kirby</h2>
+			<div id="title2" style="color:rgb(254, 218, 218)">
+				<h2>Kirby Galaxy</h2>
 				
 			</div>
 			<div id="center">
-				<div id="title">
+				<div id="title" style="color:rgb(254, 218, 218)">
 				  SCORE:
 				</div>	
 			  </div>
 			  <div id="tag">
 				+100  
 				</div>
-				<div id="score">
+				<div id="score" style="color:rgb(254, 218, 218)">
 				  0
 				</div>
 				<section class="wrapper">
@@ -37,7 +37,7 @@
 				<canvas id="webglcanvas" width=800 height=600></canvas>
 			</div>
 			
-			<div id="credits">
+			<div id="credits" style="color: white">
 				<p>Created by:</p>
 				<p>Viviana Osorio Nieto</p>
 				<p>Pablo Garcia Morales</p>
