--- a/src/mainPage.html
+++ b/src/mainPage.html
@@ -32,7 +32,7 @@
             </div>
 
             <!--CREDITS-->
-            <div>
+            <div class="credits">
                 <input type="checkbox" id="burger__input" class="burger__input">
                 <label for="burger__input" class="burger__label">
                     <!-- <i class="fa fa-bars" aria-hidden="true"></i> -->
