highscores in game over, music and swag

--- a/src/gameOver.html
+++ b/src/gameOver.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="gameOver.css">
+    <script type="module" defer src="gameOver.js"></script>
     <title>Game over</title>
 </head>
 <body>
     <div class="bg">
         <div id="alloptions">
-
+            <div class="menu_option2">
+                <h2 id="num_score">score</h2>
+            </div>
+            <div class="menu_option2">
+                <h2 id="high_score">Highscore</h2>
+            </div>
             <!--MAIN MENU-->
             <div class="menu_option1">
                 <a href="mainPage.html">
@@ -20,6 +26,7 @@
                     <img src="../images/Main-menu2.png" class="img-top1" alt="hover text">
                 </a>
             </div>
+            
     </div>
 </body>
 </html>
