--- a/src/kirby_galaxy.html
+++ b/src/kirby_galaxy.html
@@ -19,12 +19,14 @@
 					<div id="stars3"></div>
 				</section>
 				<div class="top_row">
-					<div id="top_column">
+					<div class="top_column">
 						<h2 id="score_title">SCORE:</h2>
-						<p id="num_score">0</p> 
+						<form action="gameOver.html" method="GET">
+							<p name="num_score" id="num_score">0</p> 
+						</form>
 					</div>
-					<div id="top_column">
-						<h2>Kirby Galaxy</h2>
+					<div class="top_column">
+						<h2 id="title">Kirby Galaxy</h2>
 					</div>
 				</div>
 				
