--- a/src/mainPage.html
+++ b/src/mainPage.html
@@ -8,7 +8,6 @@
 
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="mainPageCSS.css">
-
     <script type="module" defer src="main.js"></script>
 </head>
 <body>
@@ -18,9 +17,9 @@
         <div id="stars3"></div>
     </section>
        
-        <div id="alloptions">
-            <img src = "../images/title.png" id="title">
-
+        <div class="alloptions">
+            <img src = "../images/title.png" class="title_img">
+           <!--  <img src = "../images/okidokiboomer.gif" class="gif"> -->
             <!--START-->
             <div class="menu_option1">
                 <a href="kirby_galaxy.html">
@@ -74,12 +73,23 @@
                             Overley: codepen.io/whatthephuc/pen/XYpLWW 
                             </a>
                         </li>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#">
+                            Kirby model: https://skfb.ly/ooNBN
+                            </a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#">
+                            Blender Help and moral support: sof  R <3.                            </a>
+                        </li>
                     </ul>
                 </nav>
             </div>
 
             <!--KIRBY-->
-            <img src = "../images/kirby estatico.webp" id="kirbyimg">
+           <!--  <img src = "../images/kirby estatico.webp" id="kirbyimg"> -->
+            <img src = "../images/kirby-dancing.gif" class="gif">
+
         </div>
 </body>
 </html>
