Aumento de movimiento y agregar btn
kirby_galaxy.js
aumento de rango de mov.
btn a menu principal

--- a/src/kirby_galaxy.html
+++ b/src/kirby_galaxy.html
@@ -18,7 +18,10 @@
 					<div id="stars2"></div>
 					<div id="stars3"></div>
 				</section>
-				<div class="top_row">
+				<div class="top_column">
+					<a href="mainPage.html">
+						<img src="../images/Main-menu.png" alt="Normal text">
+					</a>
 					<div class="top_column">
 						<h2 id="score_title">SCORE:</h2>
 						<form action="gameOver.html" method="GET">
